crates/kirin-prettyless/src/tests/snapshots/kirin_prettyless__tests__write_to_vec.snap
---
source: crates/kirin-prettyless/src/tests/write.rs
expression: output
---
specialize @0 %8 = cfg {
  ^0(%5: i64, %y: f64) {
    %0 = constant 1.2;
    %1 = constant 3.4;
    %2 = add %0, %1;
    %4 = add %2, %5;
    return %4;
  }
  ^1(%7: f64) {
    return %7;
  }
}
