crates/kirin-prettyless/src/tests/snapshots/kirin_prettyless__tests__write_with_config.snap
---
source: crates/kirin-prettyless/src/tests/write.rs
expression: output
---
specialize @0 fn @test_func(i64) -> i64 {
  ^0(%5: i64, %y: f64) {
    %0 = constant 1.2;
    %1 = constant 3.4;
    %2 = add %0, %1;
    %4 = add %2, %5;
    return %4;
  }
  ^1(%7: f64) {
    return %7;
  }
}
